# MADServer

./: .gitignore  Backend.cc  Backend.h  Dockerfile  Event.h  EventQueue.h  Frontend.cc  Frontend.h  GameVariables.cc  GameVariables.h  Logger.cc  Logger.h  MADServer.cc  MADServer.cpp  MADServer.h  MADServerIO.cc  MADServerIO.cpp  MADServerIO.h  Makefile  README.md  Utils.cc  Utils.h  consts.h  getheaders.sh  main.cc  main.cpp  meson.build  utils.cc  utils.h  x86-linux-gnu
docker/: Dockerfile
shogo_src/: EULA.txt  Readme.txt
shogo_src/AppHeaders/: basedefs_de.h  basetypes_de.h  generic_msg_de.h
shogo_src/ClientRes/: ClientRes.dsp  ClientRes.rc  DemoInfo.txt  DemoIntro.txt  DemoMulti.txt  credits.txt  intro.txt  resource.h
shogo_src/ClientShellDLL/: AnimeLineFX.cpp  AnimeLineFX.h  BaseMenu.cpp  BaseMenu.h  BaseScaleFX.cpp  BaseScaleFX.h  BitmapFont.cpp  BitmapFont.h  BulletTrailFX.cpp  BulletTrailFX.h  CMoveMgr.cpp  CMoveMgr.h  CameraFX.h  CastLineFX.cpp  CastLineFX.h  ClientInfoMgr.cpp  ClientInfoMgr.h  ClientShellDLL.rc  ClientUtilities.cpp  ClientUtilities.h  ClientWeaponUtils.cpp  ClientWeaponUtils.h  Credits.cpp  Credits.h  CreditsWin.cpp  CreditsWin.h  CriticalHitFX.cpp  CriticalHitFX.h  DeathFX.cpp  DeathFX.h  DebrisFX.cpp  DebrisFX.h  DetailSettingsMenu.cpp  DetailSettingsMenu.h  DisplayModeMenu.cpp  DisplayModeMenu.h  DisplayOptionsMenu.cpp  DisplayOptionsMenu.h  DynamicLightFX.cpp  DynamicLightFX.h  (+132 more)
shogo_src/ObjectDLL/: AIKey.cpp  AIKey.h  AIKeyData.cpp  AIKeyData.h  AIPathList.h  AIPathMgr.cpp  AIPathMgr.h  AIScriptList.h  AISounds.cpp  AISounds.h  (+250 more)
(+35 files in other folders)
